[package]
name = "digital-cards"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[dependencies]
cardpack = "0.4.14"
derive-try-from-primitive = "1.0.0"
fltk = "1.3.2"
log = "0.4.16"
networking = "0.1.9"
parking_lot = "0.12.0"
pretty_logger = "0.1.8"

[features]
