[package]
name = "digital-cards"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[dependencies]
bevy = "0.6.1"
bevy_egui = { version = "0.12.1", features = ["multi_threaded"] }
cardpack = "0.4.14"
crossbeam = "0.8.1"
derive-try-from-primitive = "1.0.0"
either = "1.6.1"
log = "0.4.16"
networking = {git = "https://github.com/artifice-network/networking/"}
parking_lot = "0.12.0"
pretty_logger = "0.1.8"

[features]
